--- a/NET/Claro.SIACU.App.PlanMigration/Areas/PlanMigration/Views/Home/Index.cshtml
+++ b/NET/Claro.SIACU.App.PlanMigration/Areas/PlanMigration/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <input type="hidden" id="hidFlagCampaniaColab" value='@System.Configuration.ConfigurationManager.AppSettings["strCambioPlanProy140245"].ToString()' /> />
+    <input type="hidden" id="hidFlagCampaniaColab" value='@System.Configuration.ConfigurationManager.AppSettings["strCambioPlanProy140245"].ToString()' /> 
     <input type="hidden" id="hidCodCampaniaColab" value='@System.Configuration.ConfigurationManager.AppSettings["strCodCampaniaColab"].ToString()' />
     <input type="hidden" id="hidMsgErrorConsultCam" value='@System.Configuration.ConfigurationManager.AppSettings["strMsgErrorConsultCam"].ToString()' />
     
